crates/common/src/tuner/snapshots/common__tuner__layout__tests__tuner_layout_768x1024.snap
---
source: crates/common/src/tuner/layout.rs
expression: tuner_layout
---
{
  "space": [
    768.0,
    1024.0
  ],
  "orientation": "Vertical",
  "safe_area_padding": {
    "top": 24.0,
    "right": 0.0,
    "bottom": 20.0,
    "left": 0.0
  },
  "line_position": [
    [
      0.0,
      0.0
    ],
    [
      0.0,
      1024.0
    ]
  ],
  "sensor_radius": 30.963140050722636,
  "num_sensors": 6
}
