crates/common/src/tuner/snapshots/common__tuner__layout__tests__tuner_layout_800x1280.snap
---
source: crates/common/src/tuner/layout.rs
expression: tuner_layout
---
{
  "space": [
    800.0,
    1280.0
  ],
  "orientation": "Vertical",
  "safe_area_padding": {
    "top": 24.0,
    "right": 0.0,
    "bottom": 20.0,
    "left": 0.0
  },
  "line_position": [
    [
      0.0,
      0.0
    ],
    [
      0.0,
      1280.0
    ]
  ],
  "sensor_radius": 23.494641643945616,
  "num_sensors": 10
}
