crates/common/src/tuner/snapshots/common__tuner__layout__tests__tuner_layout_810x1080.snap
---
source: crates/common/src/tuner/layout.rs
expression: tuner_layout
---
{
  "space": [
    810.0,
    1080.0
  ],
  "orientation": "Vertical",
  "safe_area_padding": {
    "top": 0.0,
    "right": 0.0,
    "bottom": 0.0,
    "left": 0.0
  },
  "line_position": [
    [
      25.479956084569032,
      0.0
    ],
    [
      25.479956084569032,
      1080.0
    ]
  ],
  "sensor_radius": 25.479956084569032,
  "num_sensors": 6
}
